<resources>
    <string name="app_name">YonetiMerchant</string>
    <string name="next">Next ></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_subheading">Retrieve Your Password</string>
    <string name="submit">Submit</string>
    <string name="login_heading">Welcome to\nYoneti</string>
    <string name="verify_otp_heading">Verify your Mobile</string>
    <string name="verify_otp_subheading">Enter your OTP code here</string>
    <string name="sign_up_heading">Signup to\nYoneti</string>
    <string name="verify_now">Verify Now</string>
    <string name="home">Home</string>
    <string name="discovery">Discovery</string>
    <string name="bookmark">Bookmark</string>
    <string name="top_yoneti">Top Yoneti</string>
    <string name="login_button">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="My">My</string>
    <string name="signup">Signup</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="confirm">Confirm</string>
    <string name="add_service">Add Service</string>
    <string name="delete_service">Delete Service</string>
    <string name="add_agent">Add Agent</string>
    <string name="old_email">Old Email</string>
    <string name="new_email">New Email</string>
    <string name="name">Bohemia</string>
    <string name="password_updated_message"><![CDATA[Your Password Has Been\nSuccessfully Updated]]></string>
    <string name="payment_optitons">Manage Payments</string>
    <string name="sign_out">Sign Out</string>
    <string name="password_change">Change Password</string>
    <string name="more_settings">More Settings</string>
    <string name="bloggers">Bloggers</string>
    <string name="photos">Photos</string>
    <string name="reviews">Reviews</string>
    <string name="filter">Filter</string>
    <string name="quick_access"><![CDATA[Quick access & alerts]]></string>
    <string name="search_for_place">Search for a place</string>
    <string name="quick_search">Quick search</string>
    <string name="schedule_service">Schedule your service</string>
    <string name="quick_search_description">Set your location to start exploring</string>
    <string name="quick_search_description_line2">restaurant around you</string>
    <string name="schedule_service_description"><![CDATA[Set your location to start hiring &]]></string>
    <string name="schedule_service_description_line2"><![CDATA[scheduling services around you]]></string>
    <string name="quick_access_description">Book or hire any service today so </string>
    <string name="quick_access_description_line2">you don\'t need to wait for your turn.</string>
    <string name="potential_leads_description">Set your location to start getting</string>
    <string name="potential_leads_description_line2">leads from customer around you</string>
    <string name="search_for_place_description">"Setup your business location under our "</string>
    <string name="search_for_place_description_line2">app and start getting leeds.</string>
    <string name="schedule_clients_description">Schedule all your appointments with</string>
    <string name="schedule_clients_description_line2">your customer to avoid waiting</string>
    <string name="potential_leads">Get Potential Leads</string>
    <string name="search_for_business_location">Setup Business Location</string>
    <string name="schedule_clients">Schedule your clients</string>
    <string name="current_loc">Click here to edit profile!</string>
    <string name="account_settings">Account &amp; Settings</string>
    <string name="feedback"><![CDATA[Feedback & Support]]></string>
    <string name="about">About Yoneti</string>
    <string name="my_reviews">My Reviews</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="see_all">See All</string>
    <string name="my_services">My Services</string>
    <string name="profile">My Profile</string>
    <string name="orders">Orders</string>
    <string name="agent_dialog_title">Add details for your freelance agent</string>
    <string name="update_service">Edit Service</string>
    <string name="active_orders">ACTIVE ORDERS</string>
    <string name="complete_orders">COMPLETED ORDERS</string>
    <string name="upload_photos">Upload\nPhotos</string>
    <string name="entire_city">Entire City</string>
    <string name="view_order">View</string>
    <string name="order_detail_timepicker_title">Select Appointment time</string>
    <string name="order_cancelled">Order Cancelled</string>
<!--    used this bundle id to pass order id to order details fragment-->
    <string name="order_id">orderId</string>
</resources>