<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.yoneti.activities.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SplashActivity">

        <TextView
            android:id="@+id/tvLoginHeader"
            style="@style/tvScreenHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:gravity="center"
            android:text="@string/login_heading"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <TextView
            android:id="@+id/tvSubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/tvSubHeadingTheme"
            android:text="@string/sign_in_to_continue"
            android:typeface="monospace"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginHeader" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/etTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:text="@={loginViewModel.emailAddress}"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/tvSubHeading" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/etTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Password"
            android:text="@={loginViewModel.password}"
            android:textStyle="bold"
            android:inputType="textPassword"
            android:maxLength="20"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <TextView
            android:id="@+id/tvForgotPasswordHyperLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            style="@style/tvHyperLink"
            android:onClick="@{() -> loginViewModel.submitEmailForPassword()}"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

<!--        android:onClick="@{() -> loginViewModel.loginUser()}"-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:stateListAnimator="@null"
            android:transitionName="shared"
            android:translationZ="100dp"
            android:elevation="40dp"
            app:elevation="30dp"
            android:shadowColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordHyperLink" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitEmail"
            style="@style/materialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Submit"
            android:onClick="@{() -> loginViewModel.requestOTP()}"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordHyperLink" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_weight="1"
            android:gravity="right"
            android:layout_marginLeft="10dp"
            android:text="New to Yoneti?"
            app:layout_constraintEnd_toStartOf="@+id/tvSignupHyperLink"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

<!--        android:onClick="@{()-> signUpViewModelX.onLoginTvClick()}"-->
        <TextView
            android:id="@+id/tvSignupHyperLink"
            style="@style/tvHyperLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Signup"
            android:onClick="onSignupClick"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>