<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="meViewModel"
            type="com.example.yonetimerchant.profile.MeViewModel" />
    </data>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvOptions"
            style="@style/cardViewCorners"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="169dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent">


                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_begin="20dp" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_end="20dp" />

<!--                    erase from here-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPaymentOptions"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/payment_optitons"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_solid_check"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/paymentLine"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/tvPaymentOptions" />
                    <!--            more settings-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvMoreSettigs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/account_settings"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_setting"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/paymentLine" />

                    <View
                        android:id="@+id/moresettingsLine"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/tvMoreSettigs" />

                    <!--            change password-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvChangePassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/password_change"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_change_password"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/moresettingsLine" />

                    <View
                        android:id="@+id/changePasswordLine"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/tvChangePassword" />

<!--                    Tracking orders-->
                    <!--            change password-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/trackOrders"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/password_change"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_change_password"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/changePasswordLine" />

                    <View
                        android:id="@+id/trackOrderLine"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/trackOrders" />


                    <!--            sign out-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvFeedbackSupport"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/feedback"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_feedback"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/trackOrderLine" />

                    <View
                        android:id="@+id/feedbackLine"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/tvFeedbackSupport" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvAboutYoneti"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/about"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_about_yoneti"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/feedbackLine" />

                    <View
                        android:id="@+id/signOUtLine"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/tvAboutYoneti" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvMyReviews"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/my_reviews"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_sign_out"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/signOUtLine" />

                    <View
                        android:id="@+id/myReviewLine"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/darker_gray"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/tvMyReviews" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvSignout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:drawablePadding="10dp"
                        android:onClick="@{() -> meViewModel.onSignoutclick()}"
                        android:paddingTop="@dimen/_5sdp"
                        android:paddingBottom="@dimen/_5sdp"
                        android:text="@string/sign_out"
                        app:drawableEndCompat="@drawable/ic_next"
                        app:drawableStartCompat="@drawable/ic_log_out"
                        app:layout_constraintEnd_toStartOf="@+id/guideline28"
                        app:layout_constraintStart_toStartOf="@+id/guideline27"
                        app:layout_constraintTop_toBottomOf="@id/myReviewLine" />

                </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
</layout>